--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">mytest</string>
+    <string name="title">Title :</string>
+    <string name="id">ID:</string>
+    <string name="user_id">User ID:</string>
 </resources>
